# mtb-config-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mtb-config_cz.ts  win.rc
src/: client.cpp  client.h  common.cpp  common.h  countingguard.h  dvs.cpp  dvs.h  log.cpp  log.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  q-str-exception.h  qjsonsafe.cpp  qjsonsafe.h  settings.cpp  settings.h  version.h.in
src/win/: win_change_adress.cpp  win_change_adress.h  win_diag.cpp  win_diag.h  win_log.cpp  win_log.h  win_main.cpp  win_main.h  win_mtbusb.cpp  win_mtbusb.h  win_settings.cpp  win_settings.h
src/win/modules/: win_config.cpp  win_config.h  win_io.cpp  win_io.h  win_moduleadd.cpp  win_moduleadd.h  win_mtbrcio.cpp  win_mtbrcio.h  win_mtbuniconfig.cpp  win_mtbuniconfig.h  win_mtbuniio.cpp  win_mtbuniio.h  win_mtbunisconfig.cpp  win_mtbunisconfig.h  win_mtbunisio.cpp  win_mtbunisio.h
ui/: changeaddress.ui  diag.ui  logdialog.ui  mainwindow.ui  mtbusbdialog.ui  settingsdialog.ui
ui/modules/: moduleadd.ui  mtbrcio.ui  mtbuniconfig.ui  mtbuniio.ui  mtbunisconfig.ui  mtbunisio.ui
